
features:
 - allow setting ZSTD_CLEVEL to change compression level
 - log update contents to at-log and store last update partition to
/var/log/swupdate/last_update
 - add update_preserve_files.sh helper script to manage this file
 - allow trailing arguments for swdesc_script
 - set FW_UPDATE_IND after install unless no reboot is needed

3.15-at.3
=========
breaking changes:
 - rename hawkbit/create-updates.sh to hawkbit_push_update and install it
to bin dir

features:
 - add NO_PRESERVE_FILES option to skip handling copyback when using custom
rootfs
 - full rework of hawkbit container: use hawkbit-compose/setup_container.sh
to generate appropriate docker-compose.yml and config files

fixes:
 - fix sw-versions handling for board-specific updates (e.g. boot image) that
might generate multiple lines. This was harmless. Such duplicate lines will
also now be removed.
 - improve various error messages
 - do not try to wait for podman containers to stop if none were running
 - install base_os first if present in the image. This allows running
swdesc_exec or similar even if a base_os update is coming that would
previously fail because /target is empty

3.15-at.2
=========
breaking changes:
 - desc files: disallow using the same component with multiple versions
previously the highest version would be kept for updating sw-versions, but
this is no longer manageable with install-if different.
- versions: disallow alnum mix in semver versions (e.g. 1.2.3-abc1),
Because swupdate ordering and sort -V have different behaviour there.
- versions: also check for previously incorrectly identical versions
when using install-if different (big numbers in semver, + part of semver)
- rename mkimage.sh to mkswu and roll all secondary scripts within it,
suggesting to use the mkswu package instead of running from git.
- rename mkimage.conf to mkswu.conf (this should be transparently converted)


features:
 - version management: allow different versions for same component if