@@ -2,12 +2,14 @@
 # note versions mean it will only be run if new version is greater
 # than previous versions, e.g. a single script update will only ever
 # run once
-
+#
 # Also note, you can name your item anything but rootfs will not be
-# mounted read-write unless the version name is extra_os
+# mounted read-write unless the version component is extra_os,
+# which can be done with the --extra-os option
+version=1
 
-#swdesc_script custom_script_rootfs.sh --version extra_os 1
-swdesc_script custom_script_app.sh --version custom 1
+#swdesc_script custom_script_rootfs.sh --extra-os
+swdesc_script custom_script_app.sh
 
 # allow installing update without reboot for app-only update
 # (only containers will be restarted)
