@@ -1,11 +1,12 @@
+component=extra_os.sshd
+version=1
+
 # add your public key in enable_sshd/root/.ssh/authorized_keys
 if [ -z "$SWDESC_TEST" ]; then
 	grep -qE '^ssh-' enable_sshd/root/.ssh/authorized_keys \
 		|| error "Add your keys in enable_sshd/root/.ssh/authorized_keys"
 fi
-swdesc_files --version extra_os.sshd 1 \
-	--dest /root enable_sshd/root
+swdesc_files --dest /root enable_sshd/root
 
-swdesc_command --version extra_os.sshd 1 \
-	"ssh-keygen -A" \
+swdesc_command "ssh-keygen -A" \
 	"rc-update add sshd default"
